--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "node-gui",
+  "name": "farcaster-gui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "protoc -I=./proto proto/farcaster.proto --js_out=import_style=commonjs:./proto --grpc-web_out=import_style=typescript,mode=grpcwebtext:./proto"
   },
   "dependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "class-variance-authority": "^0.3.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "grpc-web": "^1.4.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.5.0",
+    "grpc_tools_node_protoc_ts": "^5.3.2",
+    "grpc-tools": "^1.11.3",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
