--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "sweetalert2": "^10.16.11",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
   },
