--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "sweetalert2": "^10.16.11",
+    "react-toastify": "^9.1.1",
+    "sweetalert2": "10.16.9",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
   },
