--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "grpc-web": "^1.4.2",
+    "moment": "^2.29.4",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
