refactor: remove proto generated files
These files where included in the beginning to ease the setup for devs.
We don't need it anymore, if one needs to generate these file follow the
doc.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# proto generated files
+proto/farcaster_pb.d.ts
+proto/farcaster_pb.js
+proto/FarcasterServiceClientPb.ts
